fix: nav overlay css on safari ios

--- a/styles/base/base.scss
+++ b/styles/base/base.scss
@@ -8,25 +8,17 @@
 html {
   @extend %cover;
 
-  // background: $color-white;
   background: #111111;
-  // font-size: calc(100vw / 1920 * 10);
   font-size: 16px;
   line-height: 1;
   position: fixed;
   overflow: hidden;
-  // cursor: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='32' cy='32' r='14.5' stroke='black' stroke-width='2'/%3E%3C/svg%3E")
-  //     32 32,
-  //   pointer;
 }
 
 .overlay {
   pointer-events: none;
   @extend %cover;
   z-index: 100;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
 
 .overlay__top,
@@ -34,6 +26,13 @@ html {
   height: 10%;
   width: 100%;
   background: rgb(0, 0, 0);
+  position: absolute;
+}
+.overlay__top {
+  top: 0;
+}
+.overlay__bottom {
+  bottom: 0;
 }
 
 #canvas {
