--- a/styles/conponenets/navigation.scss
+++ b/styles/conponenets/navigation.scss
@@ -14,10 +14,10 @@
 .navigation__overlay {
   pointer-events: all;
   width: 0;
-  height: 80%;
+  height: 81%;
   position: absolute;
   right: 0;
-  top: 10%;
+  top: 9.9%;
 }
 
 .navigation__icon {
